// import * as React from 'react';
// import { ReactElementsList } from 'typings/react';
// import { jestSnapshotShallowTest } from 'testing/jest-utils';
// import TristateCheckBox from './TristateCheckBox';

// const componentsForSnapshotRenderTest: ReactElementsList = {
//     'with size s and checked indeterminate': (
//         <TristateCheckBox checked="indeterminate" theme="normal" size="s">
//             Test
//         </TristateCheckBox>
//     ),
//     'with size m and checked indeterminate': (
//         <TristateCheckBox checked="indeterminate" theme="normal" size="m">
//             Test
//         </TristateCheckBox>
//     ),
//     'with size n and checked indeterminate': (
//         <TristateCheckBox checked="indeterminate" theme="normal" size="n">
//             Test
//         </TristateCheckBox>
//     ),
//     'with size n and checked yes': (
//         <TristateCheckBox checked="yes" theme="normal" size="n">
//             Test
//         </TristateCheckBox>
//     ),
//     'with size n and checked no': (
//         <TristateCheckBox checked="no" theme="normal" size="n">
//             Test
//         </TristateCheckBox>
//     ),
// };

// describe('TristateCheckBox', () => {
//     describe('renders', () => {
//         jestSnapshotShallowTest(componentsForSnapshotRenderTest);
//     });
// });
