// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TristateCheckBox renders with size m and checked indeterminate 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_indeterminate"
>
  <CheckBox
    checked={true}
    size="m"
    theme="normal"
  >
    Test
  </CheckBox>
</span>
`;

exports[`TristateCheckBox renders with size n and checked indeterminate 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_indeterminate"
>
  <CheckBox
    checked={true}
    size="n"
    theme="normal"
  >
    Test
  </CheckBox>
</span>
`;

exports[`TristateCheckBox renders with size n and checked no 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_no"
>
  <CheckBox
    checked={false}
    size="n"
    theme="normal"
  >
    Test
  </CheckBox>
</span>
`;

exports[`TristateCheckBox renders with size n and checked yes 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_yes"
>
  <CheckBox
    checked={true}
    size="n"
    theme="normal"
  >
    Test
  </CheckBox>
</span>
`;

exports[`TristateCheckBox renders with size s and checked indeterminate 1`] = `
<span
  className="TristateCheckBox TristateCheckBox_checked_indeterminate"
>
  <CheckBox
    checked={true}
    size="s"
    theme="normal"
  >
    Test
  </CheckBox>
</span>
`;
